updted project 3 to be responsive and seo optimized

--- a/img/desktop.ini
+++ b/img/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 portfolio-name.png=@portfolio-name.png,0
 wireframe.png=@wireframe.png,0
+website-design-sports-tube-community.png=@website-design-sports-tube-community.png,0
